--- a/src/views/bookDetail.ejs
+++ b/src/views/bookDetail.ejs
@@ -13,15 +13,23 @@
 
     <div class="container">
       <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="<%= books.cover %>" alt="" width="172" height="257">
-        <h1 class="display-5 fw-bold"><%= books.title %></h1>
+        <img class="d-block mx-auto mb-4" src="<%= book.cover %>" alt="" width="172" height="257">
+        <h1 class="display-5 fw-bold"><%= book.title %></h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4 fw-bold"><%= books.authors %></p>
+          <p class="lead mb-4 fw-bold">Authors: </p>
+          <% book.authors.map((author, index) => { %>
+            <%= `${author.name}${(index === book.authors.length - 1) ? '.' : ', '}` %>
+          <% }) %>
+          <hr>
           <p class="lead mb-4 fw-bold">Release Date: </p>
-          <p class="lead mb-4"><%= books.description %></p>
+          <p class="lead mb-4"><%= book.description %></p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button href="/books/edit/<%= books.id %>" type="button" class="btn btn-primary btn-lg px-4 gap-3">Edit</button>
-            <button href="/books/<%= books.id %>"type="button" class="btn btn-outline-secondary btn-lg px-4">Delete</button>
+            <% if (locals.message && message.rol == 1) { %>
+                <a href="/books/edit/<%= book.id %>" class="btn btn-primary btn-lg px-4 gap-3">Edit</a>
+                <form action="/books/delete/<%= book.id %>?_method=DELETE" method="post">
+                  <button type="submit" class="btn btn-outline-secondary btn-lg px-4">Delete</button>
+                </form>
+            <% } %>                          
           </div>
         </div>
       </div>
