--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,7 +1,10 @@
 <div class="container">
-  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+  <header
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/VisualEditor_-_Icon_-_Open-book-2.svg/1024px-VisualEditor_-_Icon_-_Open-book-2.svg.png" alt="twbs" width="50" height="50" class="rounded-circle flex-shrink-0">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/VisualEditor_-_Icon_-_Open-book-2.svg/1024px-VisualEditor_-_Icon_-_Open-book-2.svg.png"
+        alt="twbs" width="50" height="50" class="rounded-circle flex-shrink-0">
     </a>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -10,9 +13,21 @@
       <li><a href="/books/search" class="nav-link px-2 link-dark">Search</a></li>
     </ul>
 
-    <div class="col-md-3 text-end">
-      <a href="/users/login" class="btn btn-outline-primary me-2">Login</a>
-      <a href="/users/register" class="btn btn-outline-primary me-2">Sign-up</a>
+    <div class="col-md-3  ">
+      <% if (locals.message) { %>
+        <p class="mb-2 justify-content-center mb-md-0">
+          <%= message.success %>
+        </p>
+        <% } %>
     </div>
+
+    <div class="col-md-3 text-end">
+      <% if (!locals.message) { %>
+        <a href="/users/login" class="btn btn-outline-primary me-2">Login</a>
+        <% } else { %>
+          <a href="/users/logout" class="btn btn-outline-primary me-2">Logout</a>
+          <% } %>
+
+            <a href="/users/register" class="btn btn-outline-primary me-2">Sign-up</a>
   </header>
 </div>
