Correccion de vista

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,7 @@
       <li><a href="/books/search" class="nav-link px-2 link-dark">Search</a></li>
     </ul>
 
-    <div class="col-md-3  ">
+    <div class="col-md-3 text-end ">
       <% if (locals.message) { %>
         <p class="mb-2 justify-content-center mb-md-0">
           <%= message.success %>
@@ -24,10 +24,11 @@
     <div class="col-md-3 text-end">
       <% if (!locals.message) { %>
         <a href="/users/login" class="btn btn-outline-primary me-2">Login</a>
+        <a href="/users/register" class="btn btn-outline-primary me-2">Sign-up</a>
         <% } else { %>
           <a href="/users/logout" class="btn btn-outline-primary me-2">Logout</a>
           <% } %>
-
-            <a href="/users/register" class="btn btn-outline-primary me-2">Sign-up</a>
+    </div>
+            
   </header>
 </div>
