--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -19,7 +19,7 @@
   
           <h1 class="text-white mb-4">Register a new user</h1>
   
-          <form action="/users/register" method="POST" class="card" style="border-radius: 15px;">
+          <form action="/users/register" method="POST" class="card" style="border-radius: 15px;" enctype="multipart/form-data">
             <div class="card-body">
   
               <div class="row align-items-center pt-4 pb-3">
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="name" class="form-control form-control-lg" />
+                  <input type="text" name="name" class="form-control form-control-lg" required />
   
                 </div>
               </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" />
+                  <input type="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" required/>
   
                 </div>
               </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="country" class="form-control form-control-lg" placeholder="Argentina" />
+                  <input type="text" name="country" class="form-control form-control-lg" placeholder="Argentina" required/>
   
                 </div>
               </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="password" name="password" class="form-control form-control-lg" >
+                  <input type="password" name="password" class="form-control form-control-lg" required >
   
                 </div>
               </div>
