--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -19,7 +19,7 @@
   
           <h1 class="text-white mb-4">Register a new user</h1>
   
-          <form action="/users/register" method="POST" class="card" style="border-radius: 15px;" enctype="multipart/form-data">
+          <form action="/users/register" method="POST" class="card" style="border-radius: 15px;" >
             <div class="card-body">
   
               <div class="row align-items-center pt-4 pb-3">
