--- a/src/views/authorBooks.ejs
+++ b/src/views/authorBooks.ejs
@@ -13,19 +13,10 @@
 
     <div class="container">
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-        <% books.forEach(book => { %>
-          <div class="feature col">
-            <div class="feature-icon bg-gradient">
-              <img class="d-block mx-auto mb-4" src="<%= book.cover %>" alt="" width="172" height="257">
-            </div>
-            <h2><%= book.title %> </h2>
-            <p><%= book.description %></p>
-            <a href="/books/detail/<%= book.id %>" class="icon-link">
-              Detail
-            </a>
-          </div>
-        <% }) %>        
-  </div>
+        <% {books.map((book) => { %>
+          <%- include('partials/author-book.ejs', {book}) %>
+        <% })} %>
+      </div>
   </div>
 </div>
 
