--- a/src/views/editBook.ejs
+++ b/src/views/editBook.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,6 @@
   
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-
 <body>
   <div class="container">
   <%- include('partials/header.ejs') %>
@@ -19,10 +17,9 @@
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-xl-9">
   
-          <h1 class="text-white mb-4">Edit book <%= book.id %>
-              </h1>
+          <h1 class="text-white mb-4">Edit book "<%= book.title %>" </h1>
   
-          <form action="/books/edit/<%= book.id %>?_method=PUT " method="POST" class="card" style="border-radius: 15px;">
+          <form action="/books/edit/<%= id %> " method="POST" class="card" style="border-radius: 15px;">
             <div class="card-body">
   
               <div class="row align-items-center pt-4 pb-3">
@@ -33,7 +30,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="title" class="form-control form-control-lg" value="<%= book.title %>" />
+                  <input type="text" name="title" class="form-control form-control-lg" value="<%= book.title %>"/>
   
                 </div>
               </div>
@@ -48,7 +45,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="cover" class="form-control form-control-lg" value="<%= book.cover %>" />
+                  <input type="text" name="cover" class="form-control form-control-lg" value="<%= book.cover %>"/>
   
                 </div>
               </div>
@@ -59,11 +56,10 @@
                 <div class="col-md-3 ps-5">
   
                   <h6 class="mb-0">Description</h6>
-  
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="description" class="form-control form-control-lg" value="<%= book.description %>" />
+                  <input type="text" name="description" class="form-control form-control-lg" value="<%= book.description %>"/>
   
                 </div>
               </div>
@@ -84,5 +80,4 @@
 </div>
 <%- include('partials/footer.ejs') %>
 </body>
-
 </html>
