--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -16,11 +16,9 @@
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-xl-6">
-          <% if (locals.message) { %>
-            <p> <%= message.error %>  </p>
-          <% } %>
-          <h1 class="text-white mb-4">Login </h1>
   
+          <h1 class="text-white mb-4">Login </h1>      
+          <p id='errors' style="color: rgb(175, 110, 110);"><%= message != null ?  message  : "" %></p>
           <form action="/users/login" method="POST" class="card" style="border-radius: 15px;">
             <div class="card-body">
   
@@ -32,7 +30,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" value="<%=email%> "  />
+                  <input id="email" type="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" />
   
                 </div>
               </div>
@@ -47,7 +45,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="password" name="password" class="form-control form-control-lg" >
+                  <input id="password" type="password" name="password" class="form-control form-control-lg" >
   
                 </div>
               </div>
@@ -67,5 +65,27 @@
   </section>
 </div>
 <%- include('partials/footer.ejs') %>
+<script>  
+  const formElement = document.querySelector('form');
+  const emailElement = document.querySelector('#email');
+  const passwordElement = document.querySelector("#password")
+  const errorElement = document.querySelector("#errors")
+  
+  formElement.addEventListener('submit', (e) => {
+    e.preventDefault();
+    
+    if(formElement.email.value.trim() == '') {            
+        errorElement.innerHTML = 'El correo es invalido'
+        return;
+    }
+    
+    if(formElement.password.value.trim() === '') {
+      errorElement.innerHTML = 'Es necesario ingresar una contraseña'
+      return;
+    }
+
+    formElement.submit()
+  });
+</script>
 </body>
 </html>
